--- a/Interview/22.md
+++ b/Interview/22.md
@@ -164,6 +164,7 @@ func ss() {
 2. 客户端不做支持的情况下，保证服务稳定、以及代码防腐；（后期申请了一个客户端进行协助，增加防腐层，净化微服务集群的接口定义）
 3. 新老架构兼容；（在内部网关分发流量是进行判断，将未迁移至新架构的流量标记，外部网关做meta标识校验，将该流浪转移至对应架构的服务进行处理）
 4. 测试环境，创建过测试环境1、测试环境2、测试环境3等，但还是经常互相影响；（后期对测试集群和正式集群进行了多租户流浪转发，解决测试环境的问题）
+5. 超时控制、过载保护、限流（无脑限流）、降级、重试、负载均衡
 
 #### 项目遇到的问题-业务逻辑升级
 1. 语言问题(erlang - go)；
