go base 数据结构与算法

--- a/Interview/22.md
+++ b/Interview/22.md
@@ -1,6 +1,33 @@
 
 **log.Fatal这个函数只建议在init和main函数中使用，其它任务地方都不要使用**
 
+## # 必会算法题
+
+1. 快慢指针
+2. 滑动窗口
+3. 动态规划
+
+#### 链表 (力扣: 206，141，21，19，876)
+1. 单链表反转
+2. 链表中环的检测
+3. 两个有序的链表合并
+4. 删除链表倒数第 n 个结点
+5. 求链表的中间结点
+
+#### 树
+1. 树的类型
+2. 红黑树
+3. b树
+4. 字典树
+5. 二叉树常见种类，求度、求树高
+6. 二叉树中序、前序、层次遍历
+7. 深度优先和广度优先搜索
+8. 跳表
+
+#### 数组
+1. 排序算法
+
+
 ## # 架构
 
 slb（layer 7 代理）
