--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -158,4 +158,11 @@ mysql 5.6及之后的版本：InnoDB 在 (name,age) 索引内部就判断了 age
 
 全局锁的典型使用场景是，做全库逻辑备份。也就是把整库每个表都 select 出来存成文本。
 
-不加锁的话，备份系统备份得到的库不是一个逻辑时间点，这个视图是逻辑不一致的。就是在可重复读隔离级别下开启一个事务。
+以前有一种做法，是通过 FTWRL 确保不会有其他线程对数据库做更新，然后对整个库做备份。注意，在备份过程中整个库完全处于只读状态。但是让整库都只读，听上去就很危险：如果你在主库上备份，那么在备份期间都不能执行更新，业务基本上就得停摆；如果你在从库上备份，那么备份期间从库不能执行主库同步过来的 binlog，会导致主从延迟。
+
+不加锁的话，备份系统备份得到的库不是一个逻辑时间点，这个视图是逻辑不一致的。事务隔离里，其实是有一个方法能够拿到一致性视图的，就是在可重复读隔离级别下开启一个事务。
+
+官方自带的逻辑备份工具是 mysqldump。当 mysqldump 使用参数``` -single-transaction ``` 的时候，导数据之前就会启动一个事务，来确保拿到一致性视图。而由于 MVCC 的支持，这个过程中数据是可以正常更新的。
+
+- 为啥还需要ftwrl命令？
+对于 MyISAM 这种不支持事务的引擎，如果备份过程中有更新，总是只能取到最新的数据，那么就破坏了备份的一致性。这时，我们就需要使用 FTWRL 命令了。
