[mod] mysql note

--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -29,8 +29,8 @@
 #### 事务隔离级别举例区分
 
 | 事务A                 | 事务B       |
-| --------              | --------    |
-| 启动事务A  查询得到值1 | 启动事务B  |
+| --------              | --------   |
+| 启动事务A  查询得到值1 | 启动事务B    |
 |                       | 查询得到值1 |
 |                       | 将1改成2    |
 | 查询得到值v1          |             |
@@ -241,6 +241,8 @@ mysql 5.6及之后的版本：InnoDB 在 (name,age) 索引内部就判断了 age
 
 ## # 全局锁和表锁
 
+> 参考文章 [MySQL — 锁](https://blog.csdn.net/weixin_51351637/article/details/130923137)
+
 根据加锁的范围，MySQL 里面的锁大致可以分成全局锁、表级锁和行锁三类
 
 #### 全局锁
@@ -255,5 +257,5 @@ mysql 5.6及之后的版本：InnoDB 在 (name,age) 索引内部就判断了 age
 
 官方自带的逻辑备份工具是 mysqldump。当 mysqldump 使用参数``` -single-transaction ``` 的时候，导数据之前就会启动一个事务，来确保拿到一致性视图。而由于 MVCC 的支持，这个过程中数据是可以正常更新的。
 
-- 为啥还需要ftwrl命令？
-对于 MyISAM 这种不支持事务的引擎，如果备份过程中有更新，总是只能取到最新的数据，那么就破坏了备份的一致性。这时，我们就需要使用 FTWRL 命令了。
+- 为啥需要ftwrl命令？
+对于 MyISAM 这种不支持事务的引擎，如果备份过程中有更新，总是只能取到最新的数据，那么就破坏了备份的一致性。这时，我们就需要使用 FTWRL 命令了。所以，single-transaction 方法只适用于所有的表使用事务引擎的库。
