[mod] mysql note home

--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -906,12 +906,96 @@ redo log 太小的话，会导致很快就被写满，然后不得不强行刷 r
 在一个事务的更新过程中，日志是要写多次的。生成的日志都得先保存起来，但又不能在还没 commit 的时候就直接写到 redo log 文件里。所以，redo log buffer 就是一块内存，用来先存 redo 日志的。也就是说，在执行第一个更新的时候，数据的内存被修改了，redo log buffer 也写入了日志。但是，真正把日志写到 redo log 文件（文件名是 ib_logfile+ 数字），是在执行 commit 语句的时候做的。（这里的是事务执行过程中不会“主动去刷盘”，以减少不必要的 IO 消耗。但是可能会出现“被动写入磁盘”，比如内存不够、其他事务提交等情况。）
 
 
+#### 当 MySQL 去更新一行，但是要修改的值跟原来的值是相同的，这时候 MySQL 会真的去执行一次修改吗？还是看到值相同就直接返回呢？
+
+* 实验表
+```sql
+
+mysql> CREATE TABLE `t` (
+`id` int(11) NOT NULL primary key auto_increment,
+`a` int(11) DEFAULT NULL
+) ENGINE=InnoDB;
+insert into t values(1,2);
+
+```
+
+现在要执行：``` update t set a=2 where id=1; ```
+mysql 会怎样？
+
+其实 InnoDB 还是会认真执行这个操作的，该加锁的加锁，该更新的更新。为啥 mysql 不判断下？其实 MySQL 是确认了的。只是在这个语句里面，MySQL 认为读出来的值，只有一个确定的 (id=1), 而要写的是 (a=3)，只从这两个信息是看不出来“不需要修改”的。因为 mysql 能看到的结果并不包含正在进行的事务，要知道更新是需要当前读来查询数据，然后再更新的，所以不是当前读的话数据都有可能被其他事务修改，从而不再是a=2，当时当前读是需要正在执行更新的时候，获取写锁后才进行的，所以不可能提前判断值相等，就不更新。
+
+
 ## # “order by”是怎么工作的？
 
-以以下语句为例，假设已经存在表t，且表t存在 city,name,age 字段，name字段为普通索引
+以以下语句为例，假设已经存在表t，且表t存在 city,name,age 其中 city 字段为普通索引
 ```sql
 elect city,name,age from t where city='杭州' order by name limit 1000;
 ```
 
 #### 全字段排序
 explain 中 extra字段中的“Using filesort”表示的就是需要排序，MySQL 会给每个线程分配一块内存用于排序，称为 sort_buffer。
+
+通常情况下，这个语句执行流程如下所示 ：
+1. 初始化 sort_buffer，确定放入 name、city、age 这三个字段；
+2. 从索引 city 找到第一个满足 city='杭州’条件的主键 id;
+3. 到主键 id 索引取出整行，取 name、city、age 三个字段的值，存入 sort_buffer 中;
+4. 从索引 city 取下一个记录的主键 id;
+5. 重复步骤 3、4 直到 city 的值不满足查询条件为止；
+6. 对 sort_buffer 中的数据按照字段 name 做快速排序，按照排序结果取前 1000 行返回给客户端。
+“按 name 排序”这个动作，可能在内存中完成，也可能需要使用外部排序，这取决于排序所需的内存和参数 sort_buffer_size。
+
+sort_buffer_size，就是 MySQL 为排序开辟的内存（sort_buffer）的大小。如果要排序的数据量小于 sort_buffer_size，排序就在内存中完成。但如果排序数据量太大，内存放不下，则不得不利用磁盘临时文件辅助排序。
+
+
+#### rowid 排序
+在全字段排序这个算法过程里面，只对原表的数据读了一遍，剩下的操作都是在 sort_buffer 和临时文件中执行的。但这个算法有一个问题，就是如果查询要返回的字段很多的话，那么 sort_buffer 里面要放的字段数太多，这样内存里能够同时放下的行数很少，要分成很多个临时文件，排序的性能会很差。所以如果单行很大，这个方法效率不够好。
+
+* 如果 MySQL 认为排序的单行长度太大会怎么做呢？
+max_length_for_sort_data ，是 MySQL 中专门控制用于排序的行数据的长度的一个参数。它的意思是，如果单行的长度超过这个值，MySQL 就认为单行太大，要换一个算法。
+
+假设 city、name、age 这三个字段的定义总长度是 36，把 max_length_for_sort_data 设置为 16，mysql就会选用其他算法。
+
+新的算法放入 sort_buffer 的字段，只有要排序的列（即 name 字段）和主键 id。
+
+但这时，排序的结果就因为少了 city 和 age 字段的值，不能直接返回了，整个执行流程就变成如下所示的样子：
+1. 初始化 sort_buffer，确定放入两个字段，即 name 和 id；
+2. 从索引 city 找到第一个满足 city='杭州’条件的主键 id；
+3. 到主键 id 索引取出整行，取 name、id 这两个字段，存入 sort_buffer 中；
+4. 从索引 city 取下一个记录的主键 id；
+5. 重复步骤 3、4 直到不满足 city='杭州’条件为止；
+6. 对 sort_buffer 中的数据按照字段 name 进行排序；
+7. 遍历排序结果，取前 1000 行，并按照 id 的值回到原表中取出 city、name 和 age 三个字段返回给客户端。
+
+rowid 排序多访问了一次表 t 的主键索引，好处是 sort_buffer 中的数据变少了或者用来排序的文件数量变少了。
+
+
+#### 全字段排序 VS rowid 排序
+如果 MySQL 实在是担心排序内存太小，会影响排序效率，才会采用 rowid 排序算法，这样排序过程中一次可以排序更多行，但是需要再回到原表去取数据。如果 MySQL 认为内存足够大，会优先选择全字段排序，把需要的字段都放到 sort_buffer 中，这样排序后就会直接从内存里面返回查询结果了，不用再回到原表去取数据。这也就体现了 MySQL 的一个设计思想：如果内存够，就要多利用内存，尽量减少磁盘访问。
+
+对于 InnoDB 表来说，rowid 排序会要求回表多造成磁盘读，因此不会被优先选择。
+
+MySQL 做排序是一个成本比较高的操作。问题来了，是不是所有的 order by 都需要排序操作呢？看上去代价很大呀，如果不排序就能得到正确的结果，那对系统的消耗会小很多，语句的执行时间也会变得更短。
+
+其实，并不是所有的 order by 语句，都需要排序操作的。MySQL 之所以需要生成临时表，并且在临时表上做排序操作，其原因是原来的数据都是无序的。可以设想下，如果能够保证从 city 这个索引上取出来的行，天然就是按照 name 递增排序的话，是不是就可以不用再排序了呢？确实是这样的。所以，可以在这个 t 表上创建一个 city 和 name 的联合索引，对应的 SQL 语句是：``` alter table t add index city_user(city, name); ```
+
+在这个索引里面，我们依然可以用树搜索的方式定位到第一个满足 city='杭州’的记录，并且额外确保了，接下来按顺序取“下一条记录”的遍历过程中，只要 city 的值是杭州，name 的值就一定是有序的。这样整个查询过程的流程就变成了：
+1. 从索引 (city,name) 找到第一个满足 city='杭州’条件的主键 id；
+2. 到主键 id 索引取出整行，取 name、city、age 三个字段的值，作为结果集的一部分直接返回；
+3. 从索引 (city,name) 取下一个记录主键 id；
+4. 重复步骤 2、3，直到查到第 1000 条记录，或者是不满足 city='杭州’条件时循环结束。
+
+可以看到，这个查询过程不需要临时表，也不需要排序。
+
+#### 这个语句的执行流程有没有可能进一步简化呢？
+最开始 t 表建的索引是 index(city)；，然后又建了联合索引 index(city, name);  再看下查询结果，其实是可以再使用覆盖索引优化的，所以改进下索引为：index(city, name, age)
+
+复习一下。覆盖索引是指，索引上的信息足够满足查询请求，不需要再回到主键索引上去取数据。
+
+这样整个查询语句的执行流程就变成了：
+1. 从索引 (city,name,age) 找到第一个满足 city='杭州’条件的记录，取出其中的 city、name 和 age 这三个字段的值，作为结果集的一部分直接返回；
+2. 从索引 (city,name,age) 取下一个记录，同样取出这三个字段的值，作为结果集的一部分直接返回；
+3. 重复执行步骤 2，直到查到第 1000 条记录，或者是不满足 city='杭州’条件时循环结束。
+
+查看 explain 的结果：Extra 字段里面多了“Using index”，表示的就是使用了覆盖索引，性能上会快很多。
+
+当然，这里并不是说要为了每个查询能用上覆盖索引，就要把语句中涉及的字段都建上联合索引，毕竟索引还是有维护代价的。这是一个需要权衡的决定。
