[mod] mysql note 20241112

--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -7,6 +7,11 @@
 
 使用示例: ``` SELECT * FROM `information_schema`.`OPTIMIZER_TRACE` ```
 
+2 执行计划explain
+| id | select_type | table | partitions | type    | possible_keys | key | key_len | ref | rows | filtered | Extra       |
+| -- | ----------- | ----- | ---------- | ------- | ------------- | --- | ------- | --- | ---- | -------- | -----       |
+| 1  | SIMPLE      | t     | const      | PRIMARY | PRIMARY       |  4  | const   | 1   | 100  |          |             |
+
 
 
 ## # 执行过程
@@ -1159,3 +1164,47 @@ select count(*) from t where
 
 
 #### 案例2：隐式类型转换
+
+```sql
+select * from t where title=110717; # 已知 title(varchar(255)) 是索引
+```
+查询上面的语句的 explain 会发现，虽然title是索引，但是还是会进行全表扫描，而把语句修改成:
+```sql
+select * from t where title='110717'; # 已知 title(varchar(255)) 是索引
+```
+修改后就可以正常使用 title 索引了。
+
+那么为什么 title 这个字段上，本来就有索引，但是 explain 的结果却显示，这条语句需要走全表扫描。可以发现了，title 的字段类型是 varchar(255)，而输入的参数却是整型，所以需要做类型转换。
+
+在 MySQL 中，字符串和数字做比较的话，是将字符串转换成数字。
+
+所以语句：``` select * from t where title=110717; ``` 对于优化器来说相当于：``` select * from t where CAST(title AS signed int) = 110717; ```
+
+也就是说，这条语句触发了上面说到的规则：对索引字段做函数操作，优化器会放弃走树搜索功能。
+
+
+#### 隐式字符编码转换
+假设系统里还有另外一个表 t1 编码是 CHARSET=utf8 ，且上面的表 t 的编码是 CHARSET=utf8mb4; 
+
+```SQL
+select d.* from t, t1 where t1.aid=t.id and t.id=2;
+```
+第一行显示优化器会先在 t 上查到 id=2 的行，这个步骤用上了主键索引，rows=1 表示只扫描一行；第二行 key=NULL，表示没有用上 t1 表上的 aid 索引，而是进行了全表扫描。
+
+进行到这里明显不符合预期。因为表 t1 里 aid 字段上是有索引的，本来是希望通过使用 aid 索引能够快速定位到等值的行。但，这里并没有。
+
+如果去问 DBA 同学，他们可能会告诉你，因为这两个表的字符集不同，一个是 utf8，一个是 utf8mb4，所以做表连接查询的时候用不上关联字段的索引。这个回答，也是通常搜索这个问题时会得到的答案。
+
+* 为什么字符集不同就用不上索引呢？
+原因是：
+
+因为两个表编码不一致，所以上面的语句 ``` select d.* from t, t1 where t1.aid=t.id and t.id=2; ``` 实际上对于优化器来说，是要调用 CONVERT(aid USING utf8mb4) 来将 aid 格式转成 utf8mb4的
+
+所以字符集不同只是条件之一，连接过程中要求在被驱动表的索引字段上加函数操作，是直接导致对被驱动表做全表扫描的原因。
+
+解决办法：
+1. 比较常见的优化方法是，把 t1 表上的 aid 字段的字符集也改成 utf8mb4，这样就没有字符集转换的问题了。
+2. 如果能够修改字段的字符集的话，是最好不过了。但如果数据量比较大， 或者业务上暂时不能做这个 DDL 的话，那就只能采用修改 SQL 语句的方法了:
+``` select d.* from t, t1 where t1.aid=CONVERT(t.id USING utf8) and t.id=2;  ```
+
+这里，主动把 t.id 转成 utf8，就避免了被驱动表上的字符编码转换，从 explain 结果可以看到，这次索引走对了。
