[mod] mysql note

--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -1208,3 +1208,15 @@ select d.* from t, t1 where t1.aid=t.id and t.id=2;
 ``` select d.* from t, t1 where t1.aid=CONVERT(t.id USING utf8) and t.id=2;  ```
 
 这里，主动把 t.id 转成 utf8，就避免了被驱动表上的字符编码转换，从 explain 结果可以看到，这次索引走对了。
+
+
+## # 幻读是什么，幻读有什么问题？
+
+#### 幻读
+幻读指的是一个事务在前后两次查询同一个范围的时候，后一次查询看到了前一次查询没有看到的行。
+
+注意：
+1. 在可重复读隔离级别下，普通的查询是快照读，是不会看到别的事务插入的数据的。因此，幻读在“当前读”下才会出现。
+2. 当前事务使用“当前读”读取到被修改的数据不能称为幻读，幻读仅专指“新插入的行”。
+
+#### 幻读有什么问题？
