[mod] mysql note

--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -1871,6 +1871,10 @@ MySQL 在 binlog 中记录了这个命令第一次执行时所在实例的 serve
 2. 传到节点 B 执行一次以后，节点 B 生成的 binlog 的 server id 也是 A 的 server id；
 3. 再传回给节点 A，A 判断到这个 server id 与自己的相同，就不会再处理这个日志。所以，死循环在这里就断掉了。
 
+此外还有以情况会出现循环复制：
+1. 一种场景是，在一个主库更新事务后，用命令 set global server_id=x 修改了 server_id。等日志再传回来的时候，发现 server_id 跟自己的 server_id 不同，就只能执行了。
+2. 另一种场景是，有三个节点（A、B、C）的时候，trx1 是在节点 B 执行的，因此 binlog 上的 server_id 就是 B，binlog 传给节点 A，然后 A 和 C搭建了双 M 结构，就会出现循环复制。
+
 
 ## # MySQL是怎么保证高可用的？
 MySQL 要提供高可用能力，只有最终一致性是不够的。为什么这么说呢？
@@ -1937,3 +1941,29 @@ seconds_behind_master 的计算方法是这样的：
 
 #### 可靠性优先策略
 由于主备延迟的存在，所以在主备切换的时候，就相应的有不同的策略。
+
+在双 M 结构下，从节点A到节点B切换的详细过程是这样的：
+1. 判断备库 B 现在的 seconds_behind_master，如果小于某个值（比如 5 秒）继续下一步，否则持续重试这一步；
+2. 把主库 A 改成只读状态，即把 readonly 设置为 true；
+3. 判断备库 B 的 seconds_behind_master 的值，直到这个值变成 0 为止；
+4. 把备库 B 改成可读写状态，也就是把 readonly 设置为 false；
+5. 把业务请求切到备库 B。
+这个切换流程，一般是由专门的 HA 系统来完成的，我们暂时称之为可靠性优先流程。（‌HA系统（High Availability，高可用性系统）‌是一种确保系统或服务在面对硬件故障、软件错误或网络问题时仍能持续运行的技术。HA系统通过冗余和故障转移机制，最大限度地减少系统停机时间，保证业务连续性。）
+
+可以看到，这个切换流程中是有不可用时间的。因为在步骤 2 之后，主库 A 和备库 B 都处于 readonly 状态，也就是说这时系统处于不可写状态，直到步骤 5 完成后才能恢复。
+
+在这个不可用状态中，比较耗费时间的是步骤 3，可能需要耗费好几秒的时间。这也是为什么需要在步骤 1 先做判断，确保 seconds_behind_master 的值足够小。试想如果一开始主备延迟就长达 30 分钟，而不先做判断直接切换的话，系统的不可用时间就会长达 30 分钟，这种情况一般业务都是不可接受的。
+
+当然，系统的不可用时间，是由这个数据可靠性优先的策略决定的。也可以选择可用性优先的策略，来把这个不可用时间几乎降为 0。
+
+#### 可用性优先策略
+如果强行把步骤 4、5 调整到最开始执行，也就是说不等主备数据同步，直接把连接切到备库 B，并且让备库 B 可以读写，那么系统几乎就没有不可用时间了。把这个切换流程，暂时称作可用性优先流程。这个切换流程的代价，就是可能出现数据不一致的情况。
+
+如果还是用可用性优先策略，但设置 binlog_format=row，情况又会怎样呢？
+1. 使用 row 格式的 binlog 时，数据不一致的问题更容易被发现。而使用 mixed 或者 statement 格式的 binlog 时，数据很可能悄悄地就不一致了。如果过了很久才发现数据不一致的问题，很可能这时的数据不一致已经不可查，或者连带造成了更多的数据逻辑不一致。
+2. 主备切换的可用性优先策略会导致数据不一致。因此，大多数情况下，都建议你使用可靠性优先策略。毕竟对数据服务来说的话，数据的可靠性一般还是要优于可用性的。
+
+所以在满足数据可靠性的前提下，MySQL 高可用系统的可用性，是依赖于主备延迟的。延迟的时间越小，在主库故障的时候，服务恢复需要的时间就越短，可用性就越高。
+
+## # 备库为什么会延迟好几个小时？
+MySQL的并行复制策略是解决备库延迟问题的关键。在MySQL 5.5版本中，通过按表和按行分发策略实现多线程复制，但存在一些限制。随着版本的演进，MySQL 5.6和5.7版本新增了按库并行和基于WRITESET的并行复制策略，提高了备库的同步速度。这些策略的实现原理和优缺点都得到了详细介绍，包括对大事务的影响和参数调整的建议。此外，还提到了MariaDB的并行复制策略，以及备库主备延迟表现为45度线段的原因。
